k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-practica-ing
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - practicas.tssw.info
    secretName: cert-front-practicas
  rules:
    - host: practicas.tssw.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-practica-svc
                port:
                  number: 80
